# dodo-eforth

./: .gitignore  .replit  CMakeLists.txt  README.md
vm/: bytecodes.md  eforth_study.md  minimal_study.md
vm/c89/: dodo.h  eforth.c
vm/java/: Context.java  Dodo.java
